@startuml

package entity{

    abstract Entity{
        - x : int
        - y : int
        - hp: int
        - passThrought: boolean
        - direction: GlobalDirection
        + getPosition():(int, int, GlobalDirection)
        + setPosition(int direction)
        + setPosition(int x, int y)
        + canPassThrought(): boolean
        + {abstract} draw()
        + behave(GlobalDirection direction): Direction
    }

    class Hero {
        + draw()
    }

    class Monster{
        + draw()
    }

    interface Behavior{
        + {abstract} behave(Entity entity, GlobalDirection direction): Direction
    }

    class Random{
        + behave(Entity entity, GlobalDirection direction): Direction
    }

    class HeroBehavior{
        + behave(Entity entity, GlobalDirection direction): Direction
    }

}

Hero --|> Entity
Monster --|> Entity
Entity --> "1" Behavior
HeroBehavior ..|> Behavior
Random ..|> Behavior

@enduml